timed_mungo-tools/stmungo/src/main/antlr/.antlr/ScribbleParser.java
// Generated from /home/luke/Level-5-Project/Mungo/mungo-tools/stmungo/src/main/antlr/Scribble.g4 by ANTLR 4.8

package genantlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ScribbleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, MODULEKW=11, IMPORTKW=12, TYPEKW=13, PROTOCOLKW=14, GLOBALKW=15, 
		EXPLICITKW=16, AUXKW=17, LOCALKW=18, ROLEKW=19, SELFKW=20, SIGKW=21, INSTANTIATESKW=22, 
		ASKW=23, FROMKW=24, TOKW=25, CHOICEKW=26, ATKW=27, ORKW=28, RECKW=29, 
		CONTINUEKW=30, PARKW=31, ANDKW=32, INTERRUPTIBLEKW=33, WITHKW=34, BYKW=35, 
		THROWSKW=36, CATCHESKW=37, DOKW=38, CHOICENAMEKW=39, CONNECTKW=40, DISCONNECTKW=41, 
		ACCEPTKW=42, WRAPKW=43, WHITESPACE=44, COMMENT=45, LINE_COMMENT=46, EXTIDENTIFIER=47, 
		INT=48, FLOAT=49, BOOL=50, IDENTIFIER=51, COMMA=52, COLON=53, SEMICOLON=54, 
		CURLYLEFT=55, CURLYRIGHT=56, ROUNDLEFT=57, ROUNDRIGHT=58, ANGLELEFT=59, 
		ANGLERIGHT=60, AT=61;
	public static final int
		RULE_clockconst = 0, RULE_clockid = 1, RULE_rolename = 2, RULE_payloadtypename = 3, 
		RULE_protocolname = 4, RULE_parametername = 5, RULE_annotationname = 6, 
		RULE_recursionlabelname = 7, RULE_recursionvarname = 8, RULE_scopename = 9, 
		RULE_simplemessagesignaturename = 10, RULE_choiceannotationname = 11, 
		RULE_modulename = 12, RULE_membername = 13, RULE_simplemembername = 14, 
		RULE_fullmembername = 15, RULE_module = 16, RULE_datatypedecl = 17, RULE_moduledecl = 18, 
		RULE_importdecl = 19, RULE_importmodule = 20, RULE_importmember = 21, 
		RULE_payloadtypedecl = 22, RULE_messagesignaturedecl = 23, RULE_messagesignature = 24, 
		RULE_payload = 25, RULE_payloadelement = 26, RULE_protocoldecl = 27, RULE_choiceannot = 28, 
		RULE_globalprotocoldecl = 29, RULE_globalprotocolheader = 30, RULE_roledecllist = 31, 
		RULE_roledecl = 32, RULE_parameterdecllist = 33, RULE_parameterdecl = 34, 
		RULE_globalprotocoldefinition = 35, RULE_globalprotocolinstance = 36, 
		RULE_roleinstantiationlist = 37, RULE_roleinstantiation = 38, RULE_argumentlist = 39, 
		RULE_argument = 40, RULE_globalprotocolblock = 41, RULE_globalinteractionsequence = 42, 
		RULE_globalinteraction = 43, RULE_globalmessagetransfer = 44, RULE_message = 45, 
		RULE_globalconnect = 46, RULE_globaldisconnect = 47, RULE_globalwrap = 48, 
		RULE_globalchoice = 49, RULE_globalrecursion = 50, RULE_globalcontinue = 51, 
		RULE_globalparallel = 52, RULE_globalinterruptible = 53, RULE_globalinterrupt = 54, 
		RULE_globaldo = 55, RULE_localprotocoldecl = 56, RULE_localprotocolheader = 57, 
		RULE_localprotocoldefinition = 58, RULE_localprotocolinstance = 59, RULE_localprotocolblock = 60, 
		RULE_localinteraction = 61, RULE_localsend = 62, RULE_localreceive = 63, 
		RULE_localsendwrap = 64, RULE_localreceivewrap = 65, RULE_localconnect = 66, 
		RULE_localaccept = 67, RULE_localdisconnect = 68, RULE_localchoice = 69, 
		RULE_localrecursion = 70, RULE_localcontinue = 71, RULE_localparallel = 72, 
		RULE_localinterruptible = 73, RULE_localthrow = 74, RULE_localcatch = 75, 
		RULE_localdo = 76, RULE_timeconstraint = 77, RULE_constraintspec = 78, 
		RULE_clockconstraint = 79, RULE_resetpredicate = 80, RULE_resetpredlist = 81;
	private static String[] makeRuleNames() {
		return new String[] {
			"clockconst", "clockid", "rolename", "payloadtypename", "protocolname", 
			"parametername", "annotationname", "recursionlabelname", "recursionvarname", 
			"scopename", "simplemessagesignaturename", "choiceannotationname", "modulename", 
			"membername", "simplemembername", "fullmembername", "module", "datatypedecl", 
			"moduledecl", "importdecl", "importmodule", "importmember", "payloadtypedecl", 
			"messagesignaturedecl", "messagesignature", "payload", "payloadelement", 
			"protocoldecl", "choiceannot", "globalprotocoldecl", "globalprotocolheader", 
			"roledecllist", "roledecl", "parameterdecllist", "parameterdecl", "globalprotocoldefinition", 
			"globalprotocolinstance", "roleinstantiationlist", "roleinstantiation", 
			"argumentlist", "argument", "globalprotocolblock", "globalinteractionsequence", 
			"globalinteraction", "globalmessagetransfer", "message", "globalconnect", 
			"globaldisconnect", "globalwrap", "globalchoice", "globalrecursion", 
			"globalcontinue", "globalparallel", "globalinterruptible", "globalinterrupt", 
			"globaldo", "localprotocoldecl", "localprotocolheader", "localprotocoldefinition", 
			"localprotocolinstance", "localprotocolblock", "localinteraction", "localsend", 
			"localreceive", "localsendwrap", "localreceivewrap", "localconnect", 
			"localaccept", "localdisconnect", "localchoice", "localrecursion", "localcontinue", 
			"localparallel", "localinterruptible", "localthrow", "localcatch", "localdo", 
			"timeconstraint", "constraintspec", "clockconstraint", "resetpredicate", 
			"resetpredlist"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'['", "']'", "'='", "'<='", "'>='", "'!'", "'&'", "'|'", 
			"'reset'", "'module'", "'import'", "'type'", "'protocol'", "'global'", 
			"'explicit'", "'aux'", "'local'", "'role'", "'self'", "'sig'", "'instantiates'", 
			"'as'", "'from'", "'to'", "'choice'", "'at'", "'or'", "'rec'", "'continue'", 
			"'par'", "'and'", "'interruptible'", "'with'", "'by'", "'throws'", "'catches'", 
			"'do'", "'choicename'", "'connect'", "'disconnect'", "'accept'", "'wrap'", 
			null, null, null, null, null, null, null, null, "','", "':'", "';'", 
			"'{'", "'}'", "'('", "')'", "'<'", "'>'", "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "MODULEKW", 
			"IMPORTKW", "TYPEKW", "PROTOCOLKW", "GLOBALKW", "EXPLICITKW", "AUXKW", 
			"LOCALKW", "ROLEKW", "SELFKW", "SIGKW", "INSTANTIATESKW", "ASKW", "FROMKW", 
			"TOKW", "CHOICEKW", "ATKW", "ORKW", "RECKW", "CONTINUEKW", "PARKW", "ANDKW", 
			"INTERRUPTIBLEKW", "WITHKW", "BYKW", "THROWSKW", "CATCHESKW", "DOKW", 
			"CHOICENAMEKW", "CONNECTKW", "DISCONNECTKW", "ACCEPTKW", "WRAPKW", "WHITESPACE", 
			"COMMENT", "LINE_COMMENT", "EXTIDENTIFIER", "INT", "FLOAT", "BOOL", "IDENTIFIER", 
			"COMMA", "COLON", "SEMICOLON", "CURLYLEFT", "CURLYRIGHT", "ROUNDLEFT", 
			"ROUNDRIGHT", "ANGLELEFT", "ANGLERIGHT", "AT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Scribble.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ScribbleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ClockconstContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(ScribbleParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(ScribbleParser.FLOAT, 0); }
		public ClockconstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clockconst; }
	}

	public final ClockconstContext clockconst() throws RecognitionException {
		ClockconstContext _localctx = new ClockconstContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_clockconst);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==FLOAT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClockidContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ScribbleParser.IDENTIFIER, 0); }
		public ClockidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clockid; }
	}

	public final ClockidContext clockid() throws RecognitionException {
		ClockidContext _localctx = new ClockidContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_clockid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RolenameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ScribbleParser.IDENTIFIER, 0); }
		public RolenameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rolename; }
	}

	public final RolenameContext rolename() throws RecognitionException {
		RolenameContext _localctx = new RolenameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_rolename);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PayloadtypenameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ScribbleParser.IDENTIFIER, 0); }
		public PayloadtypenameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_payloadtypename; }
	}

	public final PayloadtypenameContext payloadtypename() throws RecognitionException {
		PayloadtypenameContext _localctx = new PayloadtypenameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_payloadtypename);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProtocolnameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ScribbleParser.IDENTIFIER, 0); }
		public ProtocolnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_protocolname; }
	}

	public final ProtocolnameContext protocolname() throws RecognitionException {
		ProtocolnameContext _localctx = new ProtocolnameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_protocolname);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameternameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ScribbleParser.IDENTIFIER, 0); }
		public ParameternameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametername; }
	}

	public final ParameternameContext parametername() throws RecognitionException {
		ParameternameContext _localctx = new ParameternameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parametername);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationnameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ScribbleParser.IDENTIFIER, 0); }
		public AnnotationnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotationname; }
	}

	public final AnnotationnameContext annotationname() throws RecognitionException {
		AnnotationnameContext _localctx = new AnnotationnameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_annotationname);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecursionlabelnameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ScribbleParser.IDENTIFIER, 0); }
		public RecursionlabelnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recursionlabelname; }
	}

	public final RecursionlabelnameContext recursionlabelname() throws RecognitionException {
		RecursionlabelnameContext _localctx = new RecursionlabelnameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_recursionlabelname);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecursionvarnameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ScribbleParser.IDENTIFIER, 0); }
		public RecursionvarnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recursionvarname; }
	}

	public final RecursionvarnameContext recursionvarname() throws RecognitionException {
		RecursionvarnameContext _localctx = new RecursionvarnameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_recursionvarname);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScopenameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ScribbleParser.IDENTIFIER, 0); }
		public ScopenameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scopename; }
	}
